# CamelBot

./: .eslintrc  .gitignore  Cargo.toml  README.md  camelLib.js  command.js  commandRunner.js  coreCommands.js  index.js  mappedClass.js  package-lock.json  package.json  plugClass.js
.github/workflows/: lint.yml  rust.yml
src/: commands.rs  component.rs  config.rs  constants.rs  intents.rs  interface.rs  main.rs  packet.rs  packet_templates.js  plugin.rs  ui.rs
src/templates/: intents.json  message.json  sendMessage.json
